Fixed spacing of force-tiles

--- a/src-angular/app/components/force-list/force-list.component.css
+++ b/src-angular/app/components/force-list/force-list.component.css
@@ -19,6 +19,6 @@ div.force-list {
     flex-flow: row wrap;
 }
 div.force-list div {
-    flex: 0 0 264px;
+    flex: 0 0;
     margin: 8px;
 }
